# telegram-bot-template

./: .gitignore  pyproject.toml
app/: config.py  main.py
app/dialogs/: __init__.py
app/handlers/user/: start.py
app/scheduler/: warehouse.py
